increase framerate, better overlay system