@@ -25,3 +25,11 @@ application {
 tasks.named('test') {
     useTestNG()
 }
+
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
+}
+
+tasks.withType(JavaExec).each {
+    it.jvmArgs.add('--enable-preview')
+}
